Add page setting restriction

--- a/src/components/setting/scss/manage.module.scss
+++ b/src/components/setting/scss/manage.module.scss
@@ -19,6 +19,23 @@ body {
   display: none;
 }
 
+@keyframes transition {
+  from {
+    transform: scale(0.9);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
+.box-profile {
+  // animation-name: transition;
+  // animation-duration: 0.4s;
+  // animation-timing-function: ease-in-out;
+  // animation-fill-mode: forwards;
+  animation: transition 0.4s ease-in-out forwards;
+}
+
 .main-boxAddProfile,
 .main-box-profile {
   background-color: #141414;
@@ -181,17 +198,20 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
+  animation: transition 0.4s ease-in-out forwards;
 }
 
 .title-addProfile {
   color: #fff;
   font-size: 4vw;
+  animation: transition 0.4s ease-in-out forwards;
   font-weight: 400;
 }
 
 .slogan-addProfile {
   font-size: 1.3vw;
   color: #666;
+  animation: transition 0.4s ease-in-out forwards;
   margin: 12px 0;
 }
 
@@ -202,6 +222,7 @@ body {
   align-items: center;
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
+  animation: transition 0.4s ease-in-out forwards;
   padding: 25px 0;
 }
 
@@ -210,6 +231,7 @@ body {
   min-width: 130px;
   max-height: 130px;
   min-height: 130px;
+  animation: transition 0.4s ease-in-out forwards;
   margin-right: 1.8vw;
 }
 
@@ -224,6 +246,7 @@ body {
   margin: 0 0.8em 0 0;
   padding: 0.2em 0.6em;
   text-indent: 0.1vw;
+  animation: transition 0.4s ease-in-out forwards;
   width: 18em;
 }
 
@@ -283,6 +306,7 @@ body {
 .btn-addProfile {
   display: flex;
   flex-direction: row;
+  animation: transition 0.4s ease-in-out forwards;
   .btn-nextAddProfile {
     background: #fff;
     border: 1px solid #fff;
@@ -333,6 +357,7 @@ body {
   width: 100%;
   height: 100%;
   overflow: auto;
+  animation: transition 0.4s ease-in-out;
 
   .header {
     background-color: #141414;
@@ -340,7 +365,7 @@ body {
     width: 99%;
     position: fixed;
     top: 0px;
-    z-index: 2;
+    z-index: 9;
   }
 
   .box-actionEditProfile {
@@ -352,6 +377,7 @@ body {
     h1.title-editProfile {
       color: #fff;
       font-size: 3.5vw;
+      animation: transition 0.4s ease-in-out forwards;
       font-weight: 500;
     }
 
@@ -363,6 +389,7 @@ body {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
+      animation: transition 0.4s ease-in-out forwards;
       align-items: flex-start;
 
       .img-editProfile {
@@ -510,7 +537,7 @@ body {
             margin-right: 5px;
             cursor: default;
           }
-          .ageChildren{
+          .ageChildren {
             color: #fff;
             font-weight: 500;
             background: #333;
@@ -584,6 +611,7 @@ body {
     }
 
     .btn-editUpdate {
+      animation: transition 0.4s ease-in-out forwards;
       margin: 50px 0px 30px;
 
       .btn-saveEditProfile {
