--- a/src/assets/css/scroll.css
+++ b/src/assets/css/scroll.css
@@ -1,3 +1,10 @@
+body{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
+}
+
 /* WebKit Scrollbar */
 ::-webkit-scrollbar {
   width: 12px; /* width of the scrollbar */
