--- a/src/components/setting/scss/restrictions.module.scss
+++ b/src/components/setting/scss/restrictions.module.scss
@@ -22,6 +22,8 @@
       width: 100%;
       position: fixed;
       top: 0;
+      left: 0;
+      right: 0;
 
       .max-width {
         max-width: 1400px;
