--- a/src/components/main/register/Payment/Payment.module.scss
+++ b/src/components/main/register/Payment/Payment.module.scss
@@ -53,22 +53,160 @@
     width: 100%;
     height: 64px;
     border: 2px solid #ccc;
-    border-radius: 3px;
+    border-radius: 5px;
     margin-bottom: 8px;
 }
 .option-name-logo {
     display: flex;
 }
 .option-name {
-
+    margin-right: 8px;
 }
 .option-logo {
     display: flex;
     img {
-        margin-left: 8px;
-
+        margin-right: 8px;
     }
 }
 .arrow {
     font-size: 28px;
+}
+
+// css for chose option
+
+.field-container.wrapper {
+    margin-top: 20px 0 40px;
+    text-align: left;
+    align-items: flex-start;
+    max-width: 440px;
+
+}
+
+
+.container-logo {
+    margin: 10px 0;
+    padding: 0;
+}
+.form-field-container {
+    width: 100%;
+}
+.simple-form {
+    width: 100%;
+
+}
+.nF-form-space {
+    height: 60px;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    margin-bottom: 22px;
+    position: relative;
+}
+
+// 
+.inline {
+    display: flex;
+    justify-content: space-between;
+}
+.nF-form-space.nF-form-space-inline {
+    width: 49%;
+}
+.question-icon {
+    font-size: 22px;
+    position: absolute;
+    top: 50%;
+    right:10px;
+    transform: translateY(-50%);
+    color: #888;
+    cursor: pointer;
+}
+
+
+// 
+.input-form {
+    outline: none;
+    height: 18px;
+    margin: 24px 4% auto;
+    width: 92%;
+
+    &:focus+.input-label {
+        transform: translateY(-100%);
+        font-size: 14px;
+    }
+    &:focus~.card-icon {
+        transform: translateY(0);
+    }
+}
+
+
+.input-label,.card-icon {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #888;
+    pointer-events: none;
+    transition: transform 0.3s, font-size 0.3s;
+}
+.input-label {
+    left: 10px;
+    &.active {
+        transform: translateY(-100%);
+        font-size: 14px;
+    }
+}
+.card-icon {
+    right: 10px;
+}
+
+.order-infor {
+    width: 100%;
+    height: 72px;
+    padding: 0 10px;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 600;
+}
+.order-infor-item {
+
+}
+.option-price {
+
+}
+.option-name {
+    color: rgb(115, 115, 115);
+    font-weight: 500;
+}
+.change-option-button {
+    color: rgb(0, 113, 235);
+    &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+    }
+}
+.reminder {
+    margin: 20px 0;
+}
+.link {
+    color: rgb(0, 113, 235);
+    &:hover {
+            text-decoration: underline;
+            cursor: pointer;
+        }
+}
+
+.btn {
+    color: #fff;
+    background-color: #e50914;
+    width: 100%;
+    max-width: 440px;
+    height: 65px;
+    margin-top: 15px;
+    font-size: 24px;
+    border: 1px solid transparent;
+    border-radius: 3px;
+    padding: auto;
+    text-align: center;
+    margin: 20px auto;
 }
