--- a/src/assets/css/scroll.css
+++ b/src/assets/css/scroll.css
@@ -1,36 +1,21 @@
-body{
-  overflow-y: scroll;
-  overflow-x: hidden;
-  height: 100vh;
-  width: 100vw;
-}
-
-/* WebKit Scrollbar */
 ::-webkit-scrollbar {
-  width: 12px; /* width of the scrollbar */
+  width: 12px;
 }
 
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; /* color of the track */
+  background: #f1f1f1;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #888; /* color of the thumb */
-  border-radius: 6px; /* roundness of the thumb */
+  background: #888;
+  border-radius: 6px;
 }
 
-/* Firefox Scrollbar */
-/* This is supported in Firefox 64+ */
-/* Specify the width and color of the scrollbar */
-/* Auto hides scrollbar when not interacting */
-/* To cover older Firefox versions, you might need to use different approaches */
-/* More: https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-width */
 .scrollbar {
   scrollbar-width: thin;
   scrollbar-color: #888 #f1f1f1;
 }
 
-/* For the thumb */
 .scrollbar::-webkit-scrollbar-thumb {
   background-color: #888;
 }
