--- a/src/components/setting/scss/manage.module.scss
+++ b/src/components/setting/scss/manage.module.scss
@@ -19,17 +19,17 @@ body {
   display: none;
 }
 
-@keyframes transition {
+@keyframes fadeIn {
   from {
-    transform: scale(0.9);
+    opacity: 0;
   }
   to {
-    transform: scale(1);
+    opacity: 1;
   }
 }
 
 .box-profile {
-  animation: transition 0.4s ease-in-out forwards;
+  animation: fadeIn 0.4s ease-in;
 }
 
 .main-boxAddProfile,
@@ -194,20 +194,18 @@ body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  animation: transition 0.4s ease-in-out forwards;
+  animation: fadeIn 0.4s ease-in;
 }
 
 .title-addProfile {
   color: #fff;
   font-size: 4vw;
-  animation: transition 0.4s ease-in-out forwards;
   font-weight: 400;
 }
 
 .slogan-addProfile {
   font-size: 1.3vw;
   color: #666;
-  animation: transition 0.4s ease-in-out forwards;
   margin: 12px 0;
 }
 
@@ -218,7 +216,7 @@ body {
   align-items: center;
   border-top: 1px solid #666;
   border-bottom: 1px solid #666;
-  animation: transition 0.4s ease-in-out forwards;
+  animation: fadeIn 0.4s ease-in;
   padding: 25px 0;
 }
 
@@ -227,7 +225,7 @@ body {
   min-width: 130px;
   max-height: 130px;
   min-height: 130px;
-  animation: transition 0.4s ease-in-out forwards;
+  animation: fadeIn 0.4s ease-in;
   margin-right: 1.8vw;
 }
 
@@ -242,7 +240,7 @@ body {
   margin: 0 0.8em 0 0;
   padding: 0.2em 0.6em;
   text-indent: 0.1vw;
-  animation: transition 0.4s ease-in-out forwards;
+  animation: fadeIn 0.4s ease-in;
   width: 18em;
 }
 
@@ -302,7 +300,7 @@ body {
 .btn-addProfile {
   display: flex;
   flex-direction: row;
-  animation: transition 0.4s ease-in-out forwards;
+  animation: fadeIn 0.4s ease-in;
   .btn-nextAddProfile {
     background: #fff;
     border: 1px solid #fff;
@@ -343,7 +341,7 @@ body {
 }
 
 .box-mainEditProfile {
-  position: relative;
+  position: fixed;
   background-color: #141414;
   color: grey;
   display: flex;
@@ -355,15 +353,6 @@ body {
   overflow: auto;
   animation: transition 0.4s ease-in-out;
 
-  .header {
-    background-color: #141414;
-    height: 80px;
-    width: 99%;
-    position: fixed;
-    top: 0px;
-    z-index: 9;
-  }
-
   .box-actionEditProfile {
     display: flex;
     flex-direction: column;
@@ -373,7 +362,7 @@ body {
     h1.title-editProfile {
       color: #fff;
       font-size: 3.5vw;
-      animation: transition 0.4s ease-in-out forwards;
+      animation: fadeIn 0.4s ease-in;
       font-weight: 500;
     }
 
@@ -385,7 +374,7 @@ body {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      animation: transition 0.4s ease-in-out forwards;
+      animation: fadeIn 0.4s ease-in;
       align-items: flex-start;
 
       .img-editProfile {
@@ -458,7 +447,9 @@ body {
         }
 
         .nickname-editProfile {
+          position: relative;
           margin-bottom: 20px;
+
           h2.title-editProfile {
             padding: 15px 0px;
           }
@@ -471,12 +462,19 @@ body {
           }
 
           .findOutMore-editProfile {
+            position: absolute;
             color: #fff;
             font-weight: 500;
+            width: 100%;
+            display: flex;
+          }
+
+          .instruct {
+            position: absolute;
           }
 
           .createNickName-editProfile {
-            margin-top: 15px;
+            margin-top: 40px;
             .createNickNameInput {
               background: #666;
               border: 1px solid transparent;
@@ -604,7 +602,7 @@ body {
     }
 
     .btn-editUpdate {
-      animation: transition 0.4s ease-in-out forwards;
+      animation: fadeIn 0.4s ease-in;
       margin: 50px 0px 30px;
 
       .btn-saveEditProfile {
