--- a/src/components/setting/scss/manage.module.scss
+++ b/src/components/setting/scss/manage.module.scss
@@ -267,6 +267,18 @@ body {
     width: 2.5em;
     margin-right: 0.5em;
   }
+  .checkedChildren::before {
+    content: "";
+    display: inline-block;
+    background-color: rgb(128, 128, 128);
+    color: #fff;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    left: 16.3333%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .profile-kids-tooltip {
@@ -397,6 +409,7 @@ body {
           background: #000;
           border-radius: 50%;
           box-shadow: 0 0 10px 2px #000;
+          cursor: pointer;
         }
       }
 
@@ -563,18 +576,32 @@ body {
             display: flex;
             align-items: center;
 
-            .autoPlay-next {
-              display: none;
-            }
             .marker-checkAuto-next {
+              position: absolute;
               border: 1px solid #333;
               width: 30px;
               height: 30px;
             }
+            .checkedNext::before {
+              content: "";
+              display: inline-block;
+              background-color: rgb(128, 128, 128);
+              color: #fff;
+              width: 15px;
+              height: 15px;
+              position: absolute;
+              left: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%);
+            }
+
             .content-autoPlay-next {
               font-size: 14px;
               color: #fff;
-              margin-left: 7px;
+              text-indent: 40px;
+              display: flex;
+              align-items: center;
+              height: 40px;
             }
           }
 
@@ -583,10 +610,21 @@ body {
             display: flex;
             align-items: center;
 
-            .autoPlay-preview {
-              display: none;
+            .checkedPreview::before {
+              content: "";
+              display: inline-block;
+              background-color: rgb(128, 128, 128);
+              color: #fff;
+              width: 15px;
+              height: 15px;
+              position: absolute;
+              left: 50%;
+              top: 50%;
+              transform: translate(-50%, -50%);
             }
+
             .marker-checkAuto-preview {
+              position: absolute;
               border: 1px solid #333;
               width: 30px;
               height: 30px;
@@ -594,7 +632,7 @@ body {
             .content-autoPlay-preview {
               font-size: 14px;
               color: #fff;
-              margin-left: 7px;
+              margin-left: 40px;
             }
           }
         }
