add compornet choose profile can see home page, profile main which not accept remove

--- a/src/components/setting/scss/manage.module.scss
+++ b/src/components/setting/scss/manage.module.scss
@@ -1,3 +1,8 @@
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+
 * {
   margin: 0;
   padding: 0;
@@ -120,12 +125,18 @@ body {
   max-height: 155px;
   min-width: 84px;
   min-height: 84px;
+
+  img {
+    border-radius: 3px;
+    background-color: #141414;
+    opacity: 0.5;
+  }
 }
 
-.detail-avatar img {
-  border-radius: 3px;
-  background-color: #141414;
-  opacity: 0.5;
+.choose-profile-browse {
+  img {
+    opacity: unset;
+  }
 }
 
 .edit-profile {
@@ -150,12 +161,24 @@ body {
   font-weight: 700;
   padding: 0.5em 1.5em;
   cursor: pointer;
+
+  &:hover {
+    background: #c00;
+    color: #fff;
+    border: 1px solid #c00;
+  }
 }
 
-.btn-profile:hover {
-  background: #c00;
-  color: #fff;
-  border: 1px solid #c00;
+.btn-chooseProfile-browse {
+  background: transparent;
+  border: 1px solid #666;
+  color: #666;
+
+  &:hover {
+    border: 1px solid #fff;
+    color: #fff;
+    background: transparent;
+  }
 }
 
 .add-profile {
@@ -584,6 +607,7 @@ body {
             }
             .checkedNext::before {
               content: "";
+              font-weight: 500;
               display: inline-block;
               background-color: rgb(128, 128, 128);
               color: #fff;
