--- a/src/components/setting/scss/avatarEdit.scss
+++ b/src/components/setting/scss/avatarEdit.scss
@@ -1,20 +1,30 @@
+@keyframes fadeIn {
+  from {
+    transform: scale(1.2);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+
 .box-mainAvatar {
-  position: relative;
+  position: fixed;
   color: #fff;
   background: #141414;
   height: 100%;
+  animation: fadeIn 0.4s ease-in-out;
 
   .box-avatar {
-    position: relative;
+    position: fixed;
 
     .header-container {
       position: fixed;
       background: #141414;
-      height: 120px;
+      height: 155px;
       width: 100%;
     }
     .header-bg {
-      position: absolute;
+      position: fixed;
       background-image: linear-gradient(
         180deg,
         rgba(0, 0, 0, 0.7) 10%,
@@ -24,7 +34,7 @@
       width: 100%;
     }
     .header-nav {
-      position: absolute;
+      position: fixed;
       background: hsla(0, 0%, 8%, 0.9);
       top: 7vw;
       z-index: 99;
@@ -46,6 +56,7 @@
 
         .icon {
           font-size: 2.7vw;
+          cursor: pointer;
         }
         .title-editProfileAvatar {
           margin-left: 30px;
@@ -87,13 +98,13 @@
     }
     .wrapper-list-avatars {
       .box-avatar-container {
-        position: absolute;
+        position: fixed;
         background: #141414;
         top: 10vw;
-        height: calc(100% - 120px);
+        height: calc(100% - 152px);
         overflow-y: scroll;
+        min-height: 500px;
         width: 100%;
-        min-height: 541.33333px;
 
         .list-avatars-themed {
           margin-top: 80px;
@@ -103,7 +114,7 @@
           width: 100%;
 
           .detail-list-avatars-themed {
-            margin-bottom: 50px;
+            padding-bottom: 50px;
 
             h2 {
               font-size: 2.4vw;
@@ -160,7 +171,6 @@
                 z-index: 9;
                 border-top-right-radius: 6px;
                 border-bottom-right-radius: 6px;
-                display: none;
 
                 &::before {
                   content: "";
@@ -236,15 +246,15 @@
                     white-space: normal;
 
                     .slide-pick {
-                      &:hover {
-                        box-shadow: 0 0 0 1px #fff;
-                        border-radius: 5px;
-                      }
                       img {
-                        width: 149px;
+                        width: 145px;
                         border-radius: 5px;
                         cursor: pointer;
-                        z-index: 222;
+
+                        &:hover {
+                          box-shadow: 0 0 0 2px #fff;
+                          border-radius: 5px;
+                        }
                       }
                     }
                   }
