--- a/src/components/setting/scss/confirmChangeAvt.scss
+++ b/src/components/setting/scss/confirmChangeAvt.scss
@@ -1,10 +1,10 @@
 @keyframes fadeIn {
-    from {
-        transform: scale(1.3);
-    }
-    to {
-        transform: scale(1);
-    }
+  from {
+    transform: scale(1.3);
+  }
+  to {
+    transform: scale(1);
+  }
 }
 
 .box-mainConfirmChange {
@@ -19,8 +19,9 @@
   left: 0;
   right: 0;
   color: #fff;
-  z-index: 99;
-  animation: fadeIn 0.5s ease-in-out forwards;
+  // z-index: 9;
+  overflow: auto;
+  animation: fadeIn 0.4s ease-in-out forwards;
 
   .box-confirmChange {
     .title {
@@ -50,6 +51,10 @@
           width: 150px;
           border-radius: 5px;
           margin: 10px;
+          &:hover {
+            outline: 2px solid #fff;
+            border-radius: 5px;
+          }
         }
         span {
           color: #fff;
@@ -71,6 +76,10 @@
           border-radius: 5px;
           margin: 10px;
           width: 150px;
+          &:hover {
+            outline: 2px solid #fff;
+            border-radius: 5px;
+          }
         }
         span {
           color: #fff;
