--- a/src/components/setting/scss/header.scss
+++ b/src/components/setting/scss/header.scss
@@ -1,22 +1,22 @@
 .header {
-  opacity: 0;
-  transition: opacity 0.5s ease;
-  background-color: #ba2f2f;
+  position: fixed;
+  background-color: #141414;
   height: 80px;
   width: 99.222%;
-  position: fixed;
   top: 0;
   left: 0;
-  z-index: 9;
+  opacity: 0;
+  z-index: 5;
 }
 
 .header.visible {
   opacity: 1;
+  animation: fadeIn 0.5s ease-in-out forwards;
 }
 
 .header.hidden {
   opacity: 0;
-  animation: fadeIn 0.5s ease-in-out 0.5s forwards;
+  animation: fadeIn 0.5s ease-in-out forwards;
 }
 
 @keyframes fadeIn {
