--- a/src/components/setting/scss/modalProfile.scss
+++ b/src/components/setting/scss/modalProfile.scss
@@ -13,7 +13,7 @@
   display: flex;
   -webkit-box-pack: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   inset: 0px;
   overflow: auto;
   margin: auto;
@@ -22,7 +22,6 @@
     align-self: self-end;
 
     .box-instruct {
-      animation: fadeIn 0.5s ease-in-out;
       position: relative;
       top: 50%;
       left: 50%;
@@ -141,7 +140,7 @@
             position: absolute;
             left: 50%;
             top: 50%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
 
             .one:after {
               content: "";
@@ -190,6 +189,10 @@
   }
 }
 
+.closed {
+  display: none;
+}
+
 // Step 2
 .box-mainInstructSt2 {
   background-color: rgba(0, 0, 0, 0.7);
@@ -197,7 +200,7 @@
   display: flex;
   -webkit-box-pack: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   inset: 0px;
   overflow: auto;
   margin: auto;
@@ -340,7 +343,7 @@
             position: absolute;
             left: 50%;
             top: 50%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
 
             .one:after {
               content: "";
@@ -402,6 +405,10 @@
   }
 }
 
+.closed {
+  display: none;
+}
+
 // Step 3
 .box-mainInstructSt3 {
   background-color: rgba(0, 0, 0, 0.7);
@@ -409,7 +416,7 @@
   display: flex;
   -webkit-box-pack: center;
   justify-content: center;
-  position: absolute;
+  position: fixed;
   inset: 0px;
   overflow: auto;
   margin: auto;
@@ -489,7 +496,7 @@
 
           span:nth-child(3) {
             svg {
-              opacity: .5;
+              opacity: 0.5;
             }
           }
 
@@ -519,13 +526,13 @@
             }
 
             &:nth-child(2) {
-              background: rgba(0, 0, 0, .8);
+              background: rgba(0, 0, 0, 0.8);
               border: 1px solid #4c4c4c;
             }
 
             &:nth-child(3) {
               margin-bottom: 45px;
-              background: rgba(0, 0, 0, .6);
+              background: rgba(0, 0, 0, 0.6);
               border: 1px solid #242424;
             }
             svg {
@@ -564,7 +571,7 @@
             position: absolute;
             left: 50%;
             top: 50%;
-            transform: translate(-50%,-50%);
+            transform: translate(-50%, -50%);
 
             .one:after {
               content: "";
@@ -624,4 +631,8 @@
       }
     }
   }
+}
+
+.closed {
+  display: none;
 }
