--- a/src/components/setting/scss/manage.module.scss
+++ b/src/components/setting/scss/manage.module.scss
@@ -310,6 +310,7 @@ body {
   font-size: 0.8vw;
   color: #000;
   font-weight: 500;
+  animation: fadeIn 0.5s ease-in;
 }
 
 .profile-kids-tooltip::after {
@@ -455,9 +456,6 @@ body {
           p.checkName-editProfile {
             color: #ea3841;
           }
-          .checkInput-editProfile {
-            border: 1px solid #ea3841;
-          }
         }
 
         .dropdown-editProfile {
@@ -523,6 +521,7 @@ body {
               display: flex;
               flex-direction: row;
               justify-content: space-between;
+              
 
               .checkTool {
                 color: #ea3841;
@@ -532,6 +531,8 @@ body {
               }
 
               .checkCharacters {
+                flex-grow: 1;
+                text-align: right;
                 color: #fff;
               }
             }
