Update validate and format code in restriction

--- a/src/components/setting/scss/manage.module.scss
+++ b/src/components/setting/scss/manage.module.scss
@@ -225,6 +225,7 @@ body {
   font-size: 1.3vw;
   color: #666;
   margin: 12px 0;
+  font-weight: 400;
 }
 
 .profile-metadata {
@@ -524,7 +525,6 @@ body {
               
 
               .checkTool {
-                color: #ea3841;
                 .warning-icon {
                   margin-left: 5px;
                 }
