--- a/src/components/setting/scss/restrictions.module.scss
+++ b/src/components/setting/scss/restrictions.module.scss
@@ -1,3 +1,12 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .box-mainRestrictions {
   background-color: #f3f3f3;
   display: flex;
@@ -26,7 +35,7 @@
       right: 0;
 
       .max-width {
-        max-width: 1400px;
+        max-width: 1430px;
         flex: 1 1 auto;
         display: flex;
         flex-direction: row;
@@ -80,16 +89,17 @@
           .list-profileRestriction {
             position: absolute;
             top: 72px;
-            margin-right: 5px;
+            margin-right: 15px;
             display: none;
+            animation: fadeIn 0.2s ease-in-out;
 
             .wrapper-lists {
               display: block;
               background: #141414;
               color: #fff;
-              font-size: 13px;
+              font-size: 12px;
               font-weight: 500;
-              width: 170px;
+              width: 155px;
 
               .list-profileUsers {
                 display: flex;
@@ -106,9 +116,16 @@
                   width: 100%;
                   padding: 10px 5px 0 10px;
                   margin-bottom: 5px;
+                  a {
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    width: 100%;
 
-                  img {
-                    margin-right: 10px;
+                    img {
+                      margin-right: 10px;
+                    }
                   }
                 }
                 .listItem-profileUser:hover {
@@ -117,7 +134,7 @@
               }
 
               .list-profileSettings {
-                margin: 5px 10px;
+                margin: 5px;
 
                 .listItem-profileSetting {
                   padding: 8px 5px;
@@ -138,10 +155,11 @@
               .checkOut-restrictions {
                 text-align: center;
                 border-top: 1px solid #666;
-                padding: 10px;
-              }
-              .checkOut-restrictions:hover {
-                text-decoration: underline;
+                padding: 12px;
+
+                &:hover {
+                  text-decoration: underline;
+                }
               }
             }
           }
@@ -159,15 +177,15 @@
       justify-content: center;
       align-items: center;
       max-width: 1024px;
-      min-height: 400px;
       width: 100%;
       margin-top: 20px;
-
-      .detail-content-maxwidth {
+      
+      .detail-content-maxWidth {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        margin-top: 50px;
         width: 100%;
 
         .title-avatar {
@@ -201,7 +219,7 @@
           width: 100%;
           margin-top: 20px;
 
-          .restriction-user {
+          .restriction-password {
             color: #141414;
             font-weight: 600;
             font-size: 1.2vw;
