--- a/src/components/setting/scss/restrictions.module.scss
+++ b/src/components/setting/scss/restrictions.module.scss
@@ -33,6 +33,7 @@
       top: 0;
       left: 0;
       right: 0;
+      z-index: 9;
 
       .max-width {
         max-width: 1430px;
@@ -179,8 +180,8 @@
       max-width: 1024px;
       width: 100%;
       margin-top: 20px;
-      
-      .detail-content-maxWidth {
+
+      form {
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -188,105 +189,120 @@
         margin-top: 50px;
         width: 100%;
 
-        .title-avatar {
-          display: flex;
-          flex-direction: row;
-          justify-content: space-between;
-          align-items: center;
-          width: 100%;
-          margin: 20px 0 10px;
-
-          .title {
-            h1 {
-              color: #333333;
-              font-size: 2.2vw;
-              font-weight: 600;
-            }
-          }
-          .avatar {
-            img {
-              width: 50px;
-              border-radius: 5px;
-            }
-          }
-        }
-
-        .checkPwd {
+        .detail-content-maxWidth {
           display: flex;
           flex-direction: column;
-          justify-content: flex-start;
-          align-items: flex-start;
+          justify-content: center;
+          align-items: center;
           width: 100%;
-          margin-top: 20px;
 
-          .restriction-password {
-            color: #141414;
-            font-weight: 600;
-            font-size: 1.2vw;
-          }
-          .input-checkPwd {
+          .title-avatar {
             display: flex;
             flex-direction: row;
-            justify-content: center;
+            justify-content: space-between;
             align-items: center;
+            width: 100%;
+            margin: 20px 0 10px;
+
+            .title {
+              h1 {
+                color: #333333;
+                font-size: 2.2vw;
+                font-weight: 600;
+              }
+            }
+            .avatar {
+              img {
+                width: 50px;
+                border-radius: 5px;
+              }
+            }
+          }
+
+          .checkPwd {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+            width: 100%;
             margin-top: 20px;
+            position: relative;
 
-            .input {
-              width: 300px;
-              height: 40px;
-              padding: 10px;
-              border: 1px solid #b3b3b3;
+            .restriction-password {
+              color: #141414;
+              font-weight: 600;
+              font-size: 1.2vw;
             }
-            .input:focus {
-              outline: 1px solid #d0d0d0;
-            }
+            .input-checkPwd {
+              display: flex;
+              flex-direction: row;
+              justify-content: center;
+              align-items: center;
+              margin-top: 20px;
 
-            .forgetPwd {
-              color: #0080ff;
-              text-indent: 15px;
-              font-weight: 500;
-              cursor: pointer;
-            }
-            .forgetPwd:hover {
-              text-decoration: underline;
-            }
-          }
-        }
+              .input {
+                width: 300px;
+                height: 40px;
+                padding: 10px;
+                border: 1px solid #b3b3b3;
+              }
+              .input:focus {
+                outline: 1px solid #d0d0d0;
+              }
 
-        .btn-restriction {
-          display: flex;
-          flex-direction: row;
-          margin-top: 70px;
+              .forgetPwd {
+                color: #0080ff;
+                text-indent: 15px;
+                font-weight: 500;
+                cursor: pointer;
+              }
+              .forgetPwd:hover {
+                text-decoration: underline;
+              }
+            }
+            .message {
+              position: absolute;
+              bottom: -18px;
+              color: #b00500;
+              font-size: 13px;
+            }
+          }
 
-          .next,
-          .cancel {
-            display: inline-block;
-            font-size: 14px;
-            line-height: 1em;
-            margin-right: 0.5em;
-            border-radius: 2px;
-            min-height: 37px;
-            min-width: 98px;
-            padding: 12px 1em;
-            width: auto;
-          }
-          .next {
-            background-image: linear-gradient(180deg, #0080ff, #0277ec);
-            color: #fff;
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.55);
-          }
-          .next:hover {
-            background: #2490fd;
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.55);
-          }
-          .cancel {
-            background-color: #e6e6e6;
-            background-image: linear-gradient(180deg, #e6e6e6, #ddd);
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-          }
-          .cancel:hover {
-            background: #eaeaea;
-            box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+          .btn-restriction {
+            display: flex;
+            flex-direction: row;
+            margin-top: 70px;
+
+            .next,
+            .cancel {
+              display: inline-block;
+              font-size: 14px;
+              line-height: 1em;
+              margin-right: 0.5em;
+              border-radius: 2px;
+              min-height: 37px;
+              min-width: 98px;
+              padding: 12px 1em;
+              width: auto;
+            }
+            .next {
+              background-image: linear-gradient(180deg, #0080ff, #0277ec);
+              color: #fff;
+              box-shadow: 0 1px 0 rgba(0, 0, 0, 0.55);
+            }
+            .next:hover {
+              background: #2490fd;
+              box-shadow: 0 1px 0 rgba(0, 0, 0, 0.55);
+            }
+            .cancel {
+              background-color: #e6e6e6;
+              background-image: linear-gradient(180deg, #e6e6e6, #ddd);
+              box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+            }
+            .cancel:hover {
+              background: #eaeaea;
+              box-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
+            }
           }
         }
       }
